# devdocs.nvim

./: .gitignore  Cargo.toml  Makefile.toml
src/: config.rs  lib.rs
