[package]
name = "devdocs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "devdocs"

[dependencies]
html2text = "0.12.5"
serde = "1.0.210"
optfield = "0.3"
validator = { version = "0.18", features = ["derive"] }
nvim-oxi = { version = "0.5.1",  features = ["neovim-0-10"]}

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
